navigation functionality fix

--- a/src/modules/home-hero.module/module.html
+++ b/src/modules/home-hero.module/module.html
@@ -2,7 +2,7 @@
   <img src="https://assets.codepen.io/313247/people.png" class="human-couple" alt="human couple" />
   <img src="https://assets.codepen.io/313247/hero_bg.jpg" class="background-pattern" alt="blue background pattern" />
   <div class="flex flex-col items-center hero-copy">
-    <h1 class="mb-2 text-xl font-black text-center text-white lg:text-4xl">Medicare Insurance that works for <span
+    <h1 class="mb-2 text-xl font-black text-center text-white xl:text-4xl">Medicare Insurance that works for <span
         class="italic uppercase">You!</span></h1>
     <p class="w-9/12 mb-8 text-xs leading-tight text-white lg:text-sm">Medicare is confusing, but it doesn't have to be.
       We have
