--- a/src/modules/home-hero.module/module.html
+++ b/src/modules/home-hero.module/module.html
@@ -4,10 +4,12 @@
   <div class="flex flex-col items-center hero-copy">
     <h1 class="mb-2 text-xl font-black text-center text-white xl:text-4xl">Medicare Insurance that works for <span
         class="italic uppercase">You!</span></h1>
-    <p class="w-9/12 mb-8 text-xs leading-tight text-white lg:text-sm">Medicare is confusing, but it doesn't have to be.
-      We have
-      highly trained and experienced team members - who are LOCAL to you in Rolla - that can easily walk you through
-      your options and answer all your questions.</p>
+    <h2 class="mb-2 text-sm text-center text-white xl:text-lg">Let us help you with the Medicare process <br
+        class="hidden sm:block">from start
+      to
+      finish for FREE!</h2>
+    <p class="w-9/12 mb-8 text-xs leading-tight text-white lg:text-sm">Medicare can be confusing and overwhelming. Let
+      one of our knowledgeable ROLLA agents answer all your questions and simplify the process.</p>
 
     <div class="cta_wise_wrap">
       <!--HubSpot Call-to-Action Code --><span class="hs-cta-wrapper"
