--- a/src/modules/timeline.module/module.html
+++ b/src/modules/timeline.module/module.html
@@ -1,4 +1,6 @@
 <section class="section-timeline">
-<img src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/timeline-mobile.jpg" class="timeline-mobile" alt="medicare timeline" />
-  <img src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/timeline-desktop.png" class="timeline-desktop" alt="medicare timeline" />
+  <img src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/medicare-mobile.jpg" class="timeline-mobile"
+    alt="medicare timeline" />
+  <img src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/medicare-desktop.jpg" class="timeline-desktop"
+    alt="medicare timeline" />
 </section>
