--- a/src/modules/home-hero.module/module.html
+++ b/src/modules/home-hero.module/module.html
@@ -11,7 +11,7 @@
     <p class="w-9/12 mb-8 text-xs leading-tight text-white lg:text-sm">Medicare can be confusing and overwhelming. Let
       one of our knowledgeable ROLLA agents answer all your questions and simplify the process.</p>
 
-    <div class="cta_wise_wrap">
+    <div class="cta_wise_wrap hidden">
       <!--HubSpot Call-to-Action Code --><span class="hs-cta-wrapper"
         id="hs-cta-wrapper-efcde0be-a5cc-4e9e-83fc-2b64ceb206c2"><span
           class="hs-cta-node hs-cta-efcde0be-a5cc-4e9e-83fc-2b64ceb206c2"
@@ -29,6 +29,11 @@
           });
         </script>
       </span><!-- end HubSpot Call-to-Action Code -->
+    </div> <!-- /.cta_wise_wrap -->
+
+    <div class="tmp-btn cta_wise_wrap">
+      <a class="cta_button cta_wise" href="#contact" style="" cta_dest_link="https://www.duckduckgo.com"
+        title="Contact Us Today!">Contact Us Today!</a>
     </div>
   </div>
 
